# transfermarkt-scraping-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
footballers/footballers/: items.py  pipelines.py  settings.py
src/: run_server.py  scrapy.cfg
src/app/: main.py
src/app/routes/: scraping.py
src/app/services/: scrapy_runner.py
src/footballers/: scrapy.cfg
src/footballers/footballers/spiders/: footballer.py
src/footballers_scraper/: items.py  middlewares.py  pipelines.py  settings.py
src/footballers_scraper/spiders/: footballer.py
